[package]
authors = ["copper280z <rday689@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "my-blinky"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
rtt-target = "0.5.0"
# stm32g4xx-hal = "0.0.0"
# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
[dependencies.stm32g4xx-hal]
features = ["stm32g474", "rt"]
version = "0.0.1"

# [dependencies.stm32h5xx-hal]
# features = ["stm32h503", "rt"]
# version = "*"

# this lets you use `cargo fix`!
[[bin]]
name = "my-blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
